# docubase

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docbase_demo.pptx  docker-compose.awslogs.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260415_0001_initial_schema.py  20260415_0002_add_is_superuser.py  20260416_0003_integrations.py  20260417_0004_add_google_drive_source_type.py  20260417_0005_vector_dims_1024.py  20260418_0006_engineering_memory_layer.py  20260418_0007_knowledge_graph.py  20260418_0008_graph_embedding_dim.py  20260419_0009_structure_inventory.py  20260420_0010_embedding_resilience.py  20260421_0011_repo_intelligence_phase0.py  20260421_0012_phase0_contract_enforcement.py  20260421_0013_phase1_implementation_index.py  20260422_0014_phase1_relationships_git_cache.py  20260422_0015_phase2_hybrid_search_indexes.py  20260422_0016_phase4_memory_artifacts.py  20260424_0017_implementation_fact_chunk_type.py  20260424_0018_chat_session_visitor_id.py  20260424_0019_retire_code_chunk_types.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  chat.py  integrations.py  sharing.py  sources.py  twins.py  users.py  webhooks.py  workspaces.py
backend/app/connectors/: base.py  registry.py
backend/app/connectors/google_drive/: connector.py
backend/app/connectors/manual/: connector.py
backend/app/connectors/markdown/: connector.py
backend/app/connectors/pdf/: connector.py  text_extract.py
backend/app/core/: config.py  crypto.py  db.py  exceptions.py  limiter.py  logging.py  observability.py  redis.py  security.py
backend/app/domains/answering/: contracts.py  generator.py  llm_provider.py  scaffold.py  verifier.py
backend/app/domains/chat/: routing_heuristics.py  service.py
backend/app/domains/embedding/: embedder.py
backend/app/domains/evaluation/: answer_authority.py  doctwin_evidence_health.py  evaluator.py  golden.py  latency.py  metrics.py  phase6_exit.py  quality_gate.py  twin_evidence_health.py
backend/app/domains/graph/: deterministic.py  extractor.py  service.py
backend/app/domains/integrations/: providers.py  service.py
backend/app/domains/knowledge/: evidence.py  extractors.py  pipeline.py
backend/app/domains/memory/: __init__.py  evidence.py  extractor.py  prompts.py  queue_state.py  service.py
backend/app/domains/ops/: __init__.py  arq_enqueue.py  platform_stats.py  twin_memory_queue.py
backend/app/domains/policy/: __init__.py  rules.py
backend/app/domains/retrieval/: diagnostics.py  fact_retrieval.py  hybrid.py  hydration.py  intent.py  multihop.py  packets.py  planner.py  query_decompose.py  reranker.py  router.py
backend/app/domains/sharing/: service.py
backend/app/domains/sources/: service.py
backend/app/domains/twins/: service.py
backend/app/domains/users/: service.py
backend/app/domains/workspaces/: service.py
backend/app/jobs/: ingestion.py
backend/app/models/: __init__.py  base.py  chat.py  chunk.py  embedding_cache.py  graph.py  integration.py  sharing.py  source.py  twin.py  user.py  workspace.py  workspace_memory.py
backend/app/schemas/: __init__.py  admin.py  chat.py  integrations.py  sharing.py  sources.py  twins.py  users.py  workspaces.py
backend/scripts/: reset_and_regen_memory.py  seed.py
backend/tests/: conftest.py
backend/tests/fixtures/: factories.py
backend/tests/golden/: repo_intelligence_suite.json
backend/tests/integration/: __init__.py  conftest.py  helpers.py  test_admin_operators.py  test_chat_persistence.py  test_ingestion.py  test_quality_gate.py  test_retrieval.py  test_source_sync.py
backend/tests/unit/: test_answer_generator.py  test_answer_verifier.py  test_chat_latency.py  test_chat_service.py  test_config.py  test_connector_base.py  test_deterministic_graph.py  test_embedder_failover.py  test_evaluation_golden.py  test_evaluation_metrics.py  test_evaluator.py  test_extractors.py  test_hybrid_retrieval.py  test_memory_evidence.py  test_memory_extractor.py  test_memory_intent.py  test_memory_service.py  test_phase0_evidence.py  test_policy.py  test_quality_gate.py  test_retrieval_intent.py  test_retrieval_intent_boost.py  test_retrieval_packets.py  test_retrieval_planner.py  test_sharing_service.py  test_source_lifecycle.py  test_source_schema_health.py  test_sources_service.py  test_structure_inventory.py  test_workspace_routing.py
docs/: BACKEND_QUICK_CONNECT.md  DEPLOY_SETUP_GUIDE.md  SYSTEM_INTELLIGENCE_MASTER_PLAN.md  architecture.md  brand-guide.md  demo-prep-pipeline.md  rag-pipeline.md  repo-intelligence-roadmap.md  workspace.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check-secrets.sh  deploy-backend.sh  (+6 more)
(+70 files in other folders)
