[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "docubase"
version = "0.1.0"
description = "docubase — backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    # Validation / settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.0.0",
    # Auth
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    # Redis / jobs
    "redis[hiredis]>=5.0.0",
    "arq>=0.25.0",
    "watchfiles>=0.21.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # LLM
    "openai>=1.14.0",
    # Reranking — cross-encoder scoring via Cohere Rerank API
    "cohere>=5.0.0",
    # HTTP client (for connectors)
    "httpx>=0.27.0",
    # PDF processing
    "pypdf>=4.0.0",
    # Markdown
    "markdown-it-py>=3.0.0",
    # Text chunking
    "tiktoken>=0.6.0",
    # Observability
    "structlog>=24.1.0",
    "langfuse>=2.0.0",
    # Token encryption for stored OAuth credentials
    "cryptography>=42.0.0",
    # Google Drive API client
    "google-api-python-client>=2.120.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "python-multipart>=0.0.20",
    "tree-sitter>=0.21",
    "tree-sitter-typescript>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",    # for TestClient
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() pattern

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
