[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "docbase"
version = "0.1.0"
description = "docbase — backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    # Validation / settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.0.0",
    # Auth
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    # Redis / jobs
    "redis[hiredis]>=5.0.0",
    "arq>=0.25.0",
    "watchfiles>=0.21.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # LLM
    "openai>=1.14.0",
    # Reranking — cross-encoder scoring via Cohere Rerank API
    "cohere>=5.0.0",
    # HTTP client (for connectors)
    "httpx>=0.27.0",
    # PDF processing — pypdf (PyPDF2 API); pymupdf fallback when extract_text surfaces xref/tailer
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",
    # Markdown
    "markdown-it-py>=3.0.0",
    # Text chunking
    "tiktoken>=0.6.0",
    # Observability
    "structlog>=24.1.0",
    # Stay on Langfuse 2.x: our chat/LLM paths use the legacy trace()/generation()/span()
    # API removed in Langfuse Python SDK 3+ (uv previously resolved 4.x).
    "langfuse>=2.57.0,<3",
    # Token encryption for stored OAuth credentials
    "cryptography>=42.0.0",
    # Google Drive API client
    "google-api-python-client>=2.120.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",    # for TestClient
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() pattern

[tool.ruff.lint.per-file-ignores]
# Long embedded verifier prompts; wrapping would hurt readability.
"app/domains/answering/verifier.py" = ["E501", "SIM102"]
# Routers map domain errors to HTTP responses; exception chaining is optional here.
"app/api/**" = ["B904"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default collection matches CI (`pytest tests/unit`). Integration tests: `pytest tests/integration`.
testpaths = ["tests/unit"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
